Increase Height Of select Tag To Fix Cutoff Text On Firefox

--- a/public/style.css
+++ b/public/style.css
@@ -34,7 +34,7 @@ input[type=text] {
 
 select {
   width: 140px;
-  height: 30px;
+  height: 35px;
   border-radius: 8px;
   padding: 5px 10px 10px 15px;
   margin-left: 50px;
